infra/ci/triggers/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intensa-tekton-pipeline-webhook
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: intensa-webhook.website.ru
    http:
      paths:
      - backend:
          service:
            # there is an additional el- prefix for the existing service name
            name: el-intensa-pipeline-listener # kubectl get el <EVENTLISTENR_NAME> -o=jsonpath='{.status.configuration.generatedName}{"\n"}'
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - intensa-webhook.website.ru
    secretName: intensa-tekton-webhook-tls
